# OpenOps

./: .gitignore  Dockerfile  __init__.py  app.py  baseline.py  client.py  dynamics.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt  reward.py  tasks.py
OpenOps-benchmark/: README.md
env/: environment.py  graders.py  models.py  tasks.py
inference/: baseline_openai.py  baseline_rule_based.py
server/: Dockerfile  app.py
